# ChangeLog for dev-db/hsqldb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/ChangeLog,v 1.37 2008/02/14 02:48:10 wltjr Exp $

*hsqldb-1.8.0.9-r1 (14 Feb 2008)

  14 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  +hsqldb-1.8.0.9-r1.ebuild:
  Switched to java-virtuals/servlet-api, set EAPI=1 and switched to slot deps

  30 Dec 2007; Tom Gall <tgall@gentoo.org> hsqldb-1.8.0.9.ebuild:
  stable on ppc64; bug 201799

  26 Dec 2007; Peter Weller <welp@gentoo.org> hsqldb-1.8.0.9.ebuild:
  Stable on amd64; bug 201799

  21 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  hsqldb-1.8.0.9.ebuild:
  ppc stable, bug #201799

  21 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  hsqldb-1.8.0.9.ebuild:
  filter jikes

  20 Dec 2007; Markus Meier <maekke@gentoo.org> hsqldb-1.8.0.9.ebuild:
  x86 stable, security bug #201799

  19 Dec 2007; Vlastimil Babka <caster@gentoo.org> hsqldb-1.8.0.9.ebuild:
  Add forgotten ~x86-fbsd.

*hsqldb-1.8.0.9 (19 Dec 2007)

  19 Dec 2007; Vlastimil Babka <caster@gentoo.org> +files/35hsqldb,
  +files/bundle-all-tools.patch, files/hsqldb,
  +files/resolve-config-softlinks.patch, +files/server.properties,
  +files/sqltool.rc, +hsqldb-1.8.0.9.ebuild:
  Version bump, security bug #201799.

  24 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -files/server.properties, -files/sqltool.rc, -hsqldb-1.7.3.1-r1.ebuild,
  hsqldb-1.7.3.1-r3.ebuild:
  Removed java gen 1 ebuild, quoted vars

  28 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
  hsqldb-1.7.3.1-r3.ebuild:
  Marked stable on amd64 as per bug 185117.

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> hsqldb-1.7.3.1-r3.ebuild:
  Stable on ppc64; bug #185117

  16 Jul 2007; nixnut <nixnut@gentoo.org> hsqldb-1.7.3.1-r3.ebuild:
  Stable on ppc wrt bug 185117

  16 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  hsqldb-1.7.3.1-r3.ebuild:
  stable x86, bug 185117
