@@ -9,7 +9,7 @@ AUX sqltool.rc-r1 619 RMD160 095cf1293ef4d40eed83df5f3025202c5a57f493 SHA1 8a98d
 DIST hsqldb_1_7_3_1.zip 2841759 RMD160 48c5e6e6673217caa67a6bc76775d5e676017051 SHA1 3e75e67e04c15706997e6b19040bd0c34aeea310 SHA256 491a40eb8d01afde4a8d86444dc058d905f15f7c59bbacaf62c5e2967884f676
 DIST hsqldb_1_8_0_9.zip 3493449 RMD160 202b3dce4b737f928e57e281f4035df378526ce1 SHA1 fab82a70adedaeb427f8115736bd2c8bb6358556 SHA256 e98d1d8bca15059f4ef4f0d3dde2d75778a5e1bbe8bc12abd4ec2cac39d5adec
 EBUILD hsqldb-1.7.3.1-r3.ebuild 3621 RMD160 bbe349a6dc800bada1fd7922d05ab100ed2f9bc2 SHA1 d860336d1e05565fd30a30be2c6a5065d7bca058 SHA256 2eaa77aff2476a4fdbfb858f539b80b03161da39f25c03d4d3aa07b0246e6a2d
-EBUILD hsqldb-1.8.0.9-r1.ebuild 5147 RMD160 1aed1136091967603fa126439355f69e77c36f69 SHA1 5c4cf60c054f4e96f64d67ce7b5ec80a82cb07aa SHA256 43abb6731c6c9cb7c78b62435c2d3b202d7936e54b3a5b1d330218294d527981
+EBUILD hsqldb-1.8.0.9-r1.ebuild 5120 RMD160 f7550e27b56e3af783daeb644367841d391f16f8 SHA1 98eee27b5f85f0097f7957df2380c6a6eba6f238 SHA256 c290960ca2649f0458f1670de535e94bf5886eeb9a243b83377ea5411e803a20
 EBUILD hsqldb-1.8.0.9.ebuild 5134 RMD160 963fa177b6f8d48d7ee62c9bf94f42255fdd937d SHA1 1c98443160cde516de21b17b78c57accc1f94b71 SHA256 086d231c6212e91bebb90f3431b036e1dd241eb7a90e458b9a90ed95ad73cc34
-MISC ChangeLog 5323 RMD160 e71914c002dd7025b63143ab83ff51adeb5060d5 SHA1 c7f1614846fe2cdb3bf6ac7d276de17e0d28e7b4 SHA256 1e8f14699c54b980daa3161da9b7507c6312353715576b99f1230e8339cec87b
+MISC ChangeLog 5439 RMD160 9cc73deb0d4bf1ecf45c376c5739e3d4d791a389 SHA1 73eae45ebdc0d514fc4c334f1aa9bcb8d89fa068 SHA256 52df1e478b0b20fbaf6d40e2de05866a9b83f43c15b2f36891f061c21647764d
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
