@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/hsqldb
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/ChangeLog,v 1.37 2008/02/14 02:48:10 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/hsqldb/ChangeLog,v 1.38 2008/02/15 19:02:12 wltjr Exp $
+
+  15 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
+  hsqldb-1.8.0.9-r1.ebuild:
+  Switched from einfo -> elog
 
 *hsqldb-1.8.0.9-r1 (14 Feb 2008)
 
